<resources>
    <string name="app_name">Pokedex</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="welcome_title">¡Bienvenido Entrenadorx!</string>
    <string name="fullname">Nombre completo</string>
    <string name="intro_image">imagen pikachu</string>
    <string name="pin">Pin</string>
    <string name="next">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready">Listo!</string>
</resources>